--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Rondache BR MIONS</title>
   <link rel="icon" type="image/png" href="favicon2.png">
+  <!-- EmailJS CDN -->
+  <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+  <script>
+    (function() {
+      emailjs.init("X30pM8hRGW-6h8ToH"); // Votre clé publique EmailJS
+    })();
+  </script>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -271,30 +278,29 @@
     </div>
 
     <div class="content">
-      <p>La rondache <strong>brodée</strong> officielle de la Brigade de Recherches de MIONS est disponible à la vente pour les gendarmes, passionnés et collectionneurs.</p>
+      <p>La rondache <strong>brodée</strong> officielle de la Brigade de Recherches de MIONS...</p>
       <p class="price"><strong>7 € la rondache (+ 2 € de frais de port)</strong></p>
       <p class="stock">Il reste <strong>150</strong> exemplaires disponibles.</p>
-      <p><strong>Pour toute commande, bien vouloir remplir le formulaire de contact, je reviendrai vers vous pour les modalités de paiement avant envoi.</strong></p>
+      <p><strong>Pour toute commande...</strong></p>
       <p>Paiement accepté par chèque, virement, PayPal ou Paylib.</p>
       <p style="margin-top: 30px; font-style: italic;">Me contacter pour les détails.</p>
 
       <div id="description" class="description">
         <h2>Description héraldique</h2>
-        <p>La rondache, sur fond bleu et noir, couleurs de la Gendarmerie Nationale, comporte en son centre une araignée noire avec sa toile blanche avec une menotte à une patte évoquant le travail des enquêteurs face aux mis en cause. Elle porte sur sa base le blason de la ville de Mions, siège de l'unité. Elle présente sur sa partie gauche le symbole de l'officier de police judiciaire, qualification intrinsèque de l'unité et symbole d'appartenance à la Gendarmerie.</p>
-        <p>Elle présente sur la partie extérieure une couronne noire portant en son chef la mention « BRIGADE DE RECHERCHES » de couleur blanche, faisant ainsi référence à l'appartenance de l'unité au sein de l'institution, et en sa pointe l'inscription en lettres blanches « MIONS », désignant le lieu d'implantation de l'unité.</p>
-        <p>Le tout est bordé par un liseré bicolore bleu et or.</p>
+        <p>[... contenu identique ...]</p>
       </div>
 
       <div id="terms" class="terms">
         <h2>Conditions de vente</h2>
         <ul>
-          <li>Expédition sous 1 à 3 jours après réception du paiement</li>
-          <li>Vente réservée aux membres de la gendarmerie, retraités, collectionneurs et passionnés</li>
-          <li>Pas de retour sauf défaut de fabrication</li>
+          <li>Expédition sous 1 à 3 jours...</li>
+          <li>Vente réservée...</li>
+          <li>Pas de retour...</li>
         </ul>
       </div>
 
-      <form id="form" action="https://formspree.io/f/mgvkjeor" method="POST">
+      <!-- FORMULAIRE AVEC EmailJS -->
+      <form id="email-form">
         <h2>Demandez votre commande</h2>
 
         <label for="name">Nom complet</label>
@@ -304,7 +310,7 @@
         <input type="email" name="email" required>
 
         <label for="telephone">Téléphone</label>
-        <input type="telephone" name="telephone" required>
+        <input type="text" name="telephone" required>
 
         <label for="address">Adresse postale (pour l'envoi)</label>
         <textarea name="address" rows="3" required></textarea>
@@ -323,9 +329,6 @@
         <label for="message">Message complémentaire (facultatif)</label>
         <textarea name="message" rows="3"></textarea>
 
-        <!-- Mail de confirmation automatique -->
-        <input type="hidden" name="_autoresponse" value="Merci pour votre commande. Nous reviendrons vers vous rapidement avec les modalités de paiement.">
-
         <button type="submit">Envoyer la demande</button>
       </form>
 
@@ -336,8 +339,7 @@
 
       <div class="legal">
         <h2>Mentions légales</h2>
-        <p>Cette vente est effectuée à titre personnel, dans le respect du cadre institutionnel de la Gendarmerie Nationale.</p>
-        <p>Aucun usage détourné ou commercial n’est autorisé.</p>
+        <p>Cette vente est effectuée à titre personnel...</p>
       </div>
     </div>
   </div>
@@ -345,6 +347,35 @@
   <footer>
     &copy; 2025 Brigade de Recherches de MIONS
   </footer>
+
+  <script>
+    // Lightbox
+    window.addEventListener("DOMContentLoaded", () => {
+      const mainImage  = document.querySelector(".logo");
+      const lightbox   = document.getElementById("lightbox");
+      mainImage.addEventListener("click", () => lightbox.classList.add("active"));
+      lightbox.addEventListener("click", () => lightbox.classList.remove("active"));
+    });
+
+    // Formulaire EmailJS
+    const form = document.getElementById("email-form");
+    const successMsg = document.getElementById("success-message");
+
+    form.addEventListener("submit", function(e) {
+      e.preventDefault();
+
+      emailjs.sendForm("service_1d164s5", "template_shudt68", this)
+        .then(function(response) {
+          console.log("SUCCESS!", response.status, response.text);
+          successMsg.classList.add("show");
+          form.reset();
+          successMsg.scrollIntoView({ behavior: "smooth" });
+        }, function(error) {
+          console.error("FAILED...", error);
+          alert("Erreur lors de l'envoi. Merci de réessayer.");
+        });
+    });
+  </script>
 
 </body>
 </html>
