--- a/index.html
+++ b/index.html
@@ -277,25 +277,27 @@
       <img src="rondache-br-mions.png" alt="Rondache zoom">
     </div>
 
-    <div class="content">
-      <p>La rondache <strong>brodée</strong> officielle de la Brigade de Recherches de MIONS...</p>
+   <div class="content">
+      <p>La rondache <strong>brodée</strong> officielle de la Brigade de Recherches de MIONS est disponible à la vente pour les gendarmes, passionnés et collectionneurs.</p>
       <p class="price"><strong>7 € la rondache (+ 2 € de frais de port)</strong></p>
-      <p class="stock">Il reste <strong>62</strong> exemplaires disponibles.</p>
-      <p><strong>Pour toute commande...</strong></p>
+      <p class="stock">Il reste <strong>150</strong> exemplaires disponibles.</p>
+      <p><strong>Pour toute commande, bien vouloir remplir le formulaire de contact, je reviendrai vers vous pour les modalités de paiement avant envoi.</strong></p>
       <p>Paiement accepté par chèque, virement, PayPal ou Paylib.</p>
       <p style="margin-top: 30px; font-style: italic;">Me contacter pour les détails.</p>
 
       <div id="description" class="description">
         <h2>Description héraldique</h2>
-        <p>[... contenu identique ...]</p>
+        <p>La rondache, sur fond bleu et noir, couleurs de la Gendarmerie Nationale, comporte en son centre une araignée noire avec sa toile blanche avec une menotte à une patte évoquant le travail des enquêteurs face aux mis en cause. Elle porte sur sa base le blason de la ville de Mions, siège de l'unité. Elle présente sur sa partie gauche le symbole de l'officier de police judiciaire, qualification intrinsèque de l'unité et symbole d'appartenance à la Gendarmerie.</p>
+        <p>Elle présente sur la partie extérieure une couronne noire portant en son chef la mention « BRIGADE DE RECHERCHES » de couleur blanche, faisant ainsi référence à l'appartenance de l'unité au sein de l'institution, et en sa pointe l'inscription en lettres blanches « MIONS », désignant le lieu d'implantation de l'unité.</p>
+        <p>Le tout est bordé par un liseré bicolore bleu et or.</p>
       </div>
 
       <div id="terms" class="terms">
         <h2>Conditions de vente</h2>
         <ul>
-          <li>Expédition sous 1 à 3 jours...</li>
-          <li>Vente réservée...</li>
-          <li>Pas de retour...</li>
+          <li>Expédition sous 1 à 3 jours après réception du paiement</li>
+          <li>Vente réservée aux membres de la gendarmerie, retraités, collectionneurs et passionnés</li>
+          <li>Pas de retour sauf défaut de fabrication</li>
         </ul>
       </div>
 
