--- a/index.html
+++ b/index.html
@@ -339,13 +339,20 @@
         Merci, votre demande a bien été envoyée. Vous recevrez une confirmation par email sous peu.
       </div>
 
-      <div class="legal">
+          <div class="legal">
         <h2>Mentions légales</h2>
-        <p>Cette vente est effectuée à titre personnel...</p>
+        <p>Cette vente est effectuée à titre personnel, dans le respect du cadre institutionnel de la Gendarmerie Nationale.</p>
+        <p>Aucun usage détourné ou commercial n’est autorisé.</p>
       </div>
     </div>
   </div>
 
+  <footer>
+    &copy; 2025 Brigade de Recherches de MIONS
+  </footer>
+
+</body>
+</html>
   <footer>
     &copy; 2025 Brigade de Recherches de MIONS
   </footer>
