--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
     <div class="content">
       <p>La rondache <strong>brodée</strong> officielle de la Brigade de Recherches de MIONS est disponible à la vente pour les gendarmes, passionnés et collectionneurs.</p>
       <p class="price"><strong>7 € la rondache (+ 2 € de frais de port)</strong></p>
-      <p class="stock">Il reste <strong>62</strong> exemplaires disponibles.</p>
+      <p class="stock">Il reste <strong>63</strong> exemplaires disponibles.</p>
       <p><strong>Pour toute commande, bien vouloir remplir le formulaire de contact, je reviendrai vers vous pour les modalités de paiement avant envoi.</strong></p>
       <p>Paiement accepté par chèque, virement, PayPal ou Paylib.</p>
       <p style="margin-top: 30px; font-style: italic;">Me contacter pour les détails.</p>
@@ -288,7 +288,7 @@
       <form id="email-form" aria-label="Formulaire de commande">
         <h2>Demandez votre commande</h2>
 
-        <label for="name">Nom complet</label>
+        <label for="name">Nom complet (pour l'envoi)</label>
         <input type="text" id="name" name="name" required />
 
         <label for="email">Email</label>
