--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
       <div class="payment-icons" aria-label="Modes de paiement acceptés">
         <img src="paypal-icon.png" alt="PayPal" />
         <img src="paylib-icon.png" alt="Paylib" />
-        <img src="virement-icon.png" alt="Virement bancaire" />
+        <img src="virement-icon.png" alt="Virement" />
         <img src="cheque-icon.png" alt="Chèque" />
       </div>
 
