--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
         <button type="submit">Envoyer la commande</button>
 
         <div id="success-message" class="success-message" role="alert" aria-live="polite">
-          <span class="check">✔</span> Merci, votre commande a bien été prise en compte !
+          <span class="check">✔</span> Merci, votre demande a bien été prise en compte !
         </div>
       </form>
 
