--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
       <p>La rondache <strong>brodée</strong> officielle de la Brigade de Recherches de MIONS est disponible à la vente pour les gendarmes, passionnés et collectionneurs.</p>
       <p class="price"><strong>7 € la rondache (+ 2 € de frais de port)</strong></p>
       <p class="stock">Il reste <strong>138</strong> exemplaires disponibles.</p>
-      <p><strong>Pour toute commande, bien vouloir remplir le formulaire de contact, un email vous sera envoyé automatiquement avec les moalités de paiement.</strong></p>
+      <p><strong>Pour toute commande, bien vouloir remplir le formulaire de contact, un email vous sera envoyé automatiquement avec les modalités de paiement.</strong></p>
       <p>Paiement accepté par chèque, virement, PayPal ou Paylib.</p>
       <p style="margin-top: 30px; font-style: italic;">Me contacter pour les détails.</p>
 
