--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
         <select id="payment" name="payment" required>
           <option value="">-- Choisissez un mode de paiement --</option>
           <option value="PayPal">PayPal</option>
-          <option value="Paylib">Paylib</option>
+          <option value="Paylib">Paylib/WERO</option>
           <option value="Virement">Virement</option>
           <option value="Chèque">Chèque</option>
         </select>
